--- a/part1-bitly/bitly_1/backend/Dockerfile
+++ b/part1-bitly/bitly_1/backend/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:14-alpine
 WORKDIR /opt/app
 COPY . ./
-RUN npm install && npm run build-ts
+RUN npm install
+RUN npm run build-ts
 
 EXPOSE 5000
 
