--- a/part1-bitly/bitly_1/backend/package.json
+++ b/part1-bitly/bitly_1/backend/package.json
@@ -8,7 +8,8 @@
     "start": "NODE_ENV=production node dist/index.js",
     "deploy": "npm run build-ts && npm run start",
     "dev": "NODE_ENV=development ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "rm -rf build && cd ../frontend/ && npm install && npm run build && cp -r build ../backend"
   },
   "repository": {
     "type": "git",
