--- a/part1-bitly/bitly_1/Dockerfile
+++ b/part1-bitly/bitly_1/Dockerfile
@@ -1,6 +1,11 @@
 FROM node:14-alpine
+
 WORKDIR /opt/app
-COPY . ./
+COPY frontend ./frontend
+COPY backend ./backend
+
+WORKDIR /opt/app/backend
+RUN npm run build:ui
 RUN npm install
 RUN npm run build-ts
 
