--- a/part1-bitly/bitly_1/docker-compose.yml
+++ b/part1-bitly/bitly_1/docker-compose.yml
@@ -3,11 +3,15 @@ version: '3.5'
 services:
   app:
     build: .
+    environment:
+      - DB_HOST=${DB_HOST:-bitly-db}
+      - DB_USER=${DB_USER:-bitly}
+      - DB_PW=${DB_PW:-bitly}
+      - DB_NAME=${DB_NAME:-bitly}
+      - PORT=${APP_PORT:-5000}
     container_name: bitlyapi
     depends_on:
       - db
-    # Remove port forwarding and add the app to your reverse proxy network
-    # before deploying
     ports:
       - '5000:5000'
     networks:
@@ -17,9 +21,9 @@ services:
     container_name: bitly-db
     image: postgres:14-alpine
     environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PW}      
-      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER:-bitly}
+      - POSTGRES_PASSWORD=${DB_PW:-bitly}      
+      - POSTGRES_DB=${DB_NAME:-bitly}
     networks:
       - db
     volumes:
