Added bitly clone v3 using flask

--- a/part1-bitly/bitly_1/Dockerfile
+++ b/part1-bitly/bitly_1/Dockerfile
@@ -1,11 +1,8 @@
 FROM node:14-alpine
 
 WORKDIR /opt/app
-COPY frontend ./frontend
-COPY backend ./backend
+COPY backend .
 
-WORKDIR /opt/app/backend
-RUN npm run build:ui
 RUN npm install
 RUN npm run build-ts
 
