--- a/part1-bitly/bitly_1/.env.md
+++ b/part1-bitly/bitly_1/.env.md
@@ -1,7 +1,7 @@
 ## .env example
 These variables are used for the DB and API connections
 ```
-DB_HOST=bitly-db
+DB_HOST=bitlydb
 DB_USER=bitly
 DB_PW=bitly
 DB_NAME=bitly
