--- a/part1-bitly/bitly_2/docker-compose.yml
+++ b/part1-bitly/bitly_2/docker-compose.yml
@@ -3,13 +3,14 @@ version: '3.5'
 services:
   app:
     build: .
+    restart: always
     environment:
-      - DB_HOST=${DB_HOST:-bitly-db}
+      - DB_HOST=${DB_HOST:-bitlydb2}
       - DB_USER=${DB_USER:-bitly}
       - DB_PW=${DB_PW:-bitly}
       - DB_NAME=${DB_NAME:-bitly}
       - PORT=${APP_PORT:-5000}
-    container_name: bitlyapi
+    container_name: bitlyapi2
     depends_on:
       - db
     ports:
@@ -18,7 +19,7 @@ services:
       - db
 
   db:
-    container_name: bitly-db
+    container_name: bitlydb2
     image: postgres:14-alpine
     environment:
       - POSTGRES_USER=${DB_USER:-bitly}
