--- a/part1-bitly/bitly_3/docker-compose.yml
+++ b/part1-bitly/bitly_3/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.5'
 services:
   app:
     build: .
+    restart: always
     environment:
       - DB_HOST=${DB_HOST:-bitlydb3}
       - DB_USER=${DB_USER:-bitly}
