--- a/part1-bitly/bitly_1/backend/package.json
+++ b/part1-bitly/bitly_1/backend/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../frontend/ && npm install && npm run build && cp -r build ../backend"
   },
-  "author": "Jonas Bäck",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.1",
