--- a/part1-bitly/bitly_2/Dockerfile
+++ b/part1-bitly/bitly_2/Dockerfile
@@ -1,8 +1,11 @@
 FROM node:14-alpine
 
 WORKDIR /opt/app
-COPY backend .
+COPY frontend ./frontend
+COPY backend ./backend
 
+WORKDIR /opt/app/backend
+RUN npm run build:ui
 RUN npm install
 
 EXPOSE 5000
