--- a/part1-bitly/bitly_2/backend/package.json
+++ b/part1-bitly/bitly_2/backend/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../frontend/ && npm install && npm run build && cp -r build ../backend"
   },
-  "author": "Jonas Bäck",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "@fastify/postgres": "^5.1.0",
