--- a/part1-bitly/bitly_3/Dockerfile
+++ b/part1-bitly/bitly_3/Dockerfile
@@ -1,13 +1,16 @@
-FROM python:3.10.8-alpine3.16
-WORKDIR /opt/app
+FROM node:14-alpine
 
+WORKDIR /opt/app/frontend
+COPY frontend .
+RUN npm install
+RUN npm run build
+
+WORKDIR /opt/app/backend
+COPY backend .
+RUN cp -r ../frontend/build .
 RUN apk update
-RUN apk add build-base libc-dev linux-headers zlib-dev jpeg-dev libjpeg
-
-COPY backend/requirements.txt ./
+RUN apk add build-base libc-dev linux-headers zlib-dev jpeg-dev libjpeg g++ make python3 py3-pip
 RUN pip install -r requirements.txt
-
-COPY backend ./
 
 EXPOSE 5000
 
