--- a/2-exercise-app/api/package.json
+++ b/2-exercise-app/api/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "exercise-app-backend",
+  "name": "backend_1",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-ts": "tsc --build tsconfig.json",
+    "start": "NODE_ENV=production node dist/index.js",
+    "deploy": "npm run build-ts && npm run start",
+    "dev": "NODE_ENV=development ts-node-dev src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "rm -rf build && cd ../frontend/ && npm install && npm run build && cp -r build ../backend"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "amqplib": "^0.10.3",
-    "express": "^4.18.2",
-    "socket.io": "^4.5.3"
-  },
   "devDependencies": {
-    "eslint": "^8.27.0",
-    "nodemon": "^2.0.20"
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "eslint": "^8.9.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.13",
+    "amqplib": "^0.10.3",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "nanoid": "^3.3.4",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.44"
   }
 }
