--- a/2-exercise-app/grader/package.json
+++ b/2-exercise-app/grader/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "grader",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -27,8 +27,6 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "nanoid": "^3.3.4",
-    "pg": "^8.7.3",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.44"
+    "reflect-metadata": "^0.1.13"
   }
 }
