--- a/2-exercise-app/api/Dockerfile
+++ b/2-exercise-app/api/Dockerfile
@@ -1,14 +1,11 @@
 FROM node:14-alpine
 
-RUN apk add --update docker openrc
-
 WORKDIR /opt/app
-# COPY frontend ./frontend
-COPY / ./
+COPY ui ./ui
+COPY api/ ./api
 
-# WORKDIR /opt/app/backend
-# RUN npm run build:ui
-RUN docker build -t grader-image grader-image
+WORKDIR /opt/app/api
+RUN npm run build:ui
 RUN npm install
 RUN npm run build-ts
 
