--- a/2-exercise-app/grader/Dockerfile
+++ b/2-exercise-app/grader/Dockerfile
@@ -3,11 +3,8 @@ FROM node:14-alpine
 RUN apk add --update docker openrc
 
 WORKDIR /opt/app
-# COPY frontend ./frontend
-COPY / ./
+COPY . ./
 
-# WORKDIR /opt/app/backend
-# RUN npm run build:ui
 RUN docker build -t grader-image grader-image
 RUN npm install
 RUN npm run build-ts
