Send grading result to ui with websockets

--- a/2-exercise-app/api/package.json
+++ b/2-exercise-app/api/package.json
@@ -29,6 +29,7 @@
     "nanoid": "^3.3.4",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.44"
+    "typeorm": "^0.2.44",
+    "ws": "^8.11.0"
   }
 }
