Add preliminary docker deployment

--- a/2-exercise-app/grader/Dockerfile
+++ b/2-exercise-app/grader/Dockerfile
@@ -1,14 +1,17 @@
-FROM node:14-alpine
+FROM docker:dind
 
-RUN apk add --update docker openrc
+RUN apk add npm
+# RUN service docker start
+# RUN service docker status 
 
 WORKDIR /opt/app
 COPY . ./
 
-RUN docker build -t grader-image grader-image
+# RUN docker build -t grader-image grader-image
 RUN npm install
 RUN npm run build-ts
 
-EXPOSE 5000
+EXPOSE 9001
 
-CMD npm start
+# Sleep to wait for docker to start
+CMD dockerd-entrypoint.sh </dev/null &>/dev/null & sleep 5 && npm start
