--- a/2-exercise-app/docker-compose.yml
+++ b/2-exercise-app/docker-compose.yml
@@ -1,58 +1,90 @@
-version: "3.4"
+version: '3.5'
 
 services:
-  web:
-    image: nginx
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    ports:
-      - 7800:7800
+  grader:
+    build: ./grader
+    restart: always
+    privileged: true
+    environment:
+      - DB_HOST=${DB_HOST:-exercise_db}
+      - DB_USER=${DB_USER:-exercise}
+      - DB_PW=${DB_PW:-exercise}
+      - DB_NAME=${DB_NAME:-exercise}
+      - API_PORT=${API_PORT:-5000}
+      - GRADER_PORT=${GRADER_PORT:-9001}
+      - RABBITMQ_PORT=${RABBITMQ_PORT:-5672}
+      - RABBITMQ_HOST=${RABBITMQ_HOST:-exercise_rabbitmq}
+      - RABBITMQ_USER=${RABBITMQ_USER:-guest}
+      - RABBITMQ_PW=${RABBITMQ_PW:-guest}
+    container_name: exercise_grader
     depends_on:
-      - ui
-      - api
-    command: [nginx-debug, '-g', 'daemon off;']
-
-  ui:
-    build: ui
-    image: ui
-    restart: "no"
-    volumes:
-      - ./ui/:/app
+      - db
+      - rabbitmq
     ports:
-      - 7778:7778
-    depends_on:
-      - api
-    env_file:
-      - project.env
+      - '9001:9001'
+    networks:
+      - db
+      - rabbitmq
+      - grading
 
   api:
-    build: api
-    image: api
-    restart: "no"
-    volumes:
-      - ./api/:/app
-      - /var/run/docker.sock:/var/run/docker.sock
+    build: .
+    restart: always
+    environment:
+      - DB_HOST=${DB_HOST:-exercise_db}
+      - DB_USER=${DB_USER:-exercise}
+      - DB_PW=${DB_PW:-exercise}
+      - DB_NAME=${DB_NAME:-exercise}
+      - API_PORT=${API_PORT:-5000}
+      - GRADER_PORT=${GRADER_PORT:-9001}
+      - RABBITMQ_PORT=${RABBITMQ_PORT:-5672}
+      - RABBITMQ_HOST=${RABBITMQ_HOST:-exercise_rabbitmq}
+      - RABBITMQ_USER=${RABBITMQ_USER:-guest}
+      - RABBITMQ_PW=${RABBITMQ_PW:-guest}
+    container_name: exercise_api
+    depends_on:
+      - db
+      - rabbitmq
+      - grader
     ports:
-      - 7777:7777
-    depends_on:
-      - database
-      - flyway
-    env_file:
-      - project.env
+      - '5000:5000'
+    networks:
+      - db
+      - rabbitmq
+      - grading
 
-  database:
-    container_name: dab-p2-database-5441c689-896d-419d-be4a-238df2382941
-    image: postgres:14.1
-    restart: "no"
-    env_file:
-      - project.env
-
-  flyway:
-    image: flyway/flyway:8.4.0-alpine
-    depends_on:
-      - database
+  db:
+    container_name: exercise_db
+    image: postgres:14-alpine
+    environment:
+      - POSTGRES_USER=${DB_USER:-exercise}
+      - POSTGRES_PASSWORD=${DB_PW:-exercise}      
+      - POSTGRES_DB=${DB_NAME:-exercise}
+    networks:
+      - db
     volumes:
-      - .:/flyway/sql
-    command: -connectRetries=60 -baselineOnMigrate=true migrate
-    env_file:
-      - project.env
+      - /var/lib/postgresql/data/:/data/db
+    ports:
+      - '5432:5432'
+  
+  rabbitmq:
+    container_name: exercise_rabbitmq
+    image: rabbitmq:3.11-management
+    networks:
+      - rabbitmq
+    ports:
+      - '15672:15672'
+      - '5672:5672'
+
+volumes:
+  db-data:
+    driver: local
+
+networks:
+  db:
+    driver: bridge
+  rabbitmq:
+    driver: bridge
+  grading:
+    driver: bridge
+
