--- a/2-exercise-app/api/package.json
+++ b/2-exercise-app/api/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.3",
     "nanoid": "^3.3.4",
     "pg": "^8.7.3",
+    "query-string": "^7.1.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.44",
     "ws": "^8.11.0"
