--- a/2-exercise-app/docker-compose.yml
+++ b/2-exercise-app/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - API_PORT=${API_PORT:-5000}
       - GRADER_PORT=${GRADER_PORT:-9001}
       - RABBITMQ_PORT=${RABBITMQ_PORT:-5672}
-      - RABBITMQ_HOST=${RABBITMQ_HOST:-exercise_rabbitmq}
+      - RABBITMQ_HOST=${RABBITMQ_HOST:-rabbitmq}
       - RABBITMQ_USER=${RABBITMQ_USER:-exercise}
       - RABBITMQ_PW=${RABBITMQ_PW:-exercise}
     container_name: exercise_api
@@ -37,7 +37,7 @@ services:
       - API_PORT=${API_PORT:-5000}
       - GRADER_PORT=${GRADER_PORT:-9001}
       - RABBITMQ_PORT=${RABBITMQ_PORT:-5672}
-      - RABBITMQ_HOST=${RABBITMQ_HOST:-exercise_rabbitmq}
+      - RABBITMQ_HOST=${RABBITMQ_HOST:-rabbitmq}
       - RABBITMQ_USER=${RABBITMQ_USER:-exercise}
       - RABBITMQ_PW=${RABBITMQ_PW:-exercise}
     container_name: exercise_grader
@@ -61,6 +61,7 @@ services:
       - rabbitmq
     ports:
       - '15672:15672'
+      - '5672:5672'
     healthcheck:
       test: ["CMD", "curl", "-f", "http://rabbitmq:15672"]
       interval: 10s
