--- a/3-jodel/kube-deployments/jodel-app.yaml
+++ b/3-jodel/kube-deployments/jodel-app.yaml
@@ -1,20 +1,39 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: bitlyapi-app
+  name: jodel-app
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      app: bitlyapi-app
+      app: jodel-app
   template:
     metadata:
       labels:
-        app: bitlyapi-app
+        app: jodel-app
     spec:
       containers:
-        - name: bitlyapi-app
-          image: bitlyapi:latest
+        - name: jodel-app
+          image: jodel-app:latest
           imagePullPolicy: Never
           ports:
             - containerPort: 5000
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: jodel-app-hpa
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: jodel-app
+  minReplicas: 1
+  maxReplicas: 5
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 50
