--- a/3-jodel/ui/package.json
+++ b/3-jodel/ui/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
     "axios": "^1.1.3",
+    "gatsby": "^5.2.0",
     "nanoid": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
