--- a/3-jodel/kube-deployments/jodel-app.yaml
+++ b/3-jodel/kube-deployments/jodel-app.yaml
@@ -13,27 +13,29 @@ spec:
         app: jodel-app
     spec:
       containers:
-        - name: jodel-app
+        - name: jodel-app-container
           image: jodel-app:latest
           imagePullPolicy: Never
           ports:
             - containerPort: 5000
----
-apiVersion: autoscaling/v2
-kind: HorizontalPodAutoscaler
-metadata:
-  name: jodel-app-hpa
-spec:
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: jodel-app
-  minReplicas: 1
-  maxReplicas: 5
-  metrics:
-    - type: Resource
-      resource:
-        name: cpu
-        target:
-          type: Utilization
-          averageUtilization: 50
+          resources:
+            limits:
+              cpu: 1000m
+            requests:
+              cpu: 500m
+          env:
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: jodel-db-secret
+                  key: username
+            - name: DB_PW
+              valueFrom:
+                secretKeyRef:
+                  name: jodel-db-secret
+                  key: password
+            - name: DB_NAME
+              value: "jodel"
+            - name: API_PORT
+              value: "5000"
+      restartPolicy: Always
