--- a/3-jodel/ui/package.json
+++ b/3-jodel/ui/package.json
@@ -13,18 +13,14 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
-    "react-router-dom": "^6.4.3",
-    "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "socket.io-client": "^4.5.4",
-    "web-vitals": "^2.1.4"
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "gatsby develop -p 3000 -o",
+    "build": "gatsby build",
+    "serve": "gatsby serve -p 3000"
   },
   "eslintConfig": {
     "extends": [
