--- a/3-jodel/docker-compose.yml
+++ b/3-jodel/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.5'
 
 services:
-  api:
+  jodel_api:
     container_name: jodel_api
     build: ./api
     restart: always
@@ -22,17 +22,17 @@ services:
     container_name: jodel_ui
     build: ./ui
     restart: always
-    environment:
-      - GATSBY_API_PORT=${API_PORT:-5000}
-      - GATSBY_API_HOST=${API_HOST:-api}
     depends_on:
       - db
-      - api
+      - jodel_api
     ports:
       - '3000:3000'
     networks:
       - db
       - api
+    volumes:
+      - ./ui/nginx.conf:/etc/nginx/nginx.conf:ro
+
   db:
     container_name: jodel_db
     image: postgres:14-alpine
