--- a/3-jodel/kube-deployments/api-hpa.yaml
+++ b/3-jodel/kube-deployments/api-hpa.yaml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: jodel-app
+  name: jodel-api-hpa
 spec:
   maxReplicas: 10
   metrics:
@@ -15,7 +15,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: jodel-app
+    name: jodel-api
   behavior:
     scaleDown:
       stabilizationWindowSeconds: 60
