--- a/3-jodel/ui/nginx.conf
+++ b/3-jodel/ui/nginx.conf
@@ -7,7 +7,7 @@ http {
     sendfile on;
 
     upstream api {
-        server jodel_api:5000;
+        server jodel-api:5000;
     }
 
     proxy_set_header Host $host;
